--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,43 @@
+.palette
+{
+	display: flex;
+	justify-content: space-around;
+}
 
+.square
+{
+	height: 100px;
+	width: 100px;
+}
+
+img
+{
+	height: 470px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 50px;
+	margin-top: 30px;
+}
+
+
+.form
+{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
+}
+
+.champ
+{
+	width: 500px;
+}
+
+.code
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
